--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,16 @@
   --color-my-slate-700: hsl(200, 24%, 40%);
   --color-my-slate-900: hsl(202, 55%, 16%);
   --color-my-slate-max: hsl(200, 55%, 10%);
+
+  --breakpoint-md: 1000px;
 }
 
 body {
   min-height: 100vh;
   font-family: "Plus Jakarta Sans";
+  display: grid;
+  place-items: center;
+  background-color: hsl(202, 86%, 94%);
 }
 
 * {
